This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

11-Oct-2004 (Lars Duening)  (3.3.611)
  - (efuns.c, lex) Efun to_int() now supports the '0x', '0b', and '0o'
       bases (suggested by Steve Goucher).

30-Oct-2004 (Lars Duening)  (3.3.610)
  - (func_spec, object.c) Introduced the (str, n) form for efun present()
    (Bug #0000134).

26-Oct-2004 (Lars Duening)  (3.3.609)
  - (smalloc.c) Ok, ordering the small block freelists was a bad idea - I
      removed that now. Ordering the large block freelists doesn't seem
      to make a performance difference, so I keep it in for now.

24-Oct-2004 (Lars Duening)  (3.3.608)
  - (backend.c) Reduced the frequence of data-cleanup such that at least
      time_to_clean_up seconds (or 3600 seconds) must have passed since
      the last reference.
  - (smalloc.c) smalloc now supports allocations of 0 byte length (needed
      to replace malloc()).

14-Oct-2004 (Lars Duening)  (3.3.607)
  - (comm.c) The NOECHO hook call specified only two arguments when
      three were required (reported by Bardio and Steve G.).

11-Oct-2004 (Lars Duening)  (3.3.606)
  - (mregex.c) Added a number of NULL pointer checks to the deallocation
      of regular expressions (reported by Bardioc, #0000130, #0000135).

29-Sep-2004 (Lars Duening)  (3.3.605)
  - (smalloc.c) Corrected a bug in the SMALLOC_ORDER_FREELIST code for
      small blocks: the code forgot to store the block size into the
      free blocks, which caused the defragment code to do wondrous things
      (reported by Bardioc).

27-Sep-2004 (Lars Duening)  (3.3.604)
  - (pkg_tls.c) Corrected the callback handling for tls_init_connection()
      (Bug #0000131).
  - (driver.h) Added a macro MIN() for those systems which don't have it.

16-Sep-2004 (Lars Duening)  (3.3.603)
  - (config.h.in, smalloc.c, xalloc, main.c, sysmalloc.c, xptmalloc.c)